# python-docker

./: Dockerfile  pyproject.toml
tests/: test_python_docker.py
web/: settings.py  urls.py
