[tool.poetry]
name = "python-docker"
version = "0.1.0"
description = ""
authors = ["Pawan Dubey <git@pawandubey.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
